fdo#77812 :FILESAVE :DOCX : Extra Section Break gets added in file

Issue :
	LO was exporting DOCX containing MultiColumns with additional
	Section break Continuos.

	Implementation :
	1] Added check for Column_count in MSWordExportBase::WriteText()
	   If Column_count > 1 and Text node is empty then do not
	   export Section Break.
	2] Written Export unit test case.

Change-Id: Ibf3e6bd2d4827aa77a659b1600939cc56d65a63b