sw/source/filter/ww8/wrtww8.hxx
@@ -39,6 +39,7 @@
 #include "writerhelper.hxx"
 #include "../inc/msfilter.hxx"
 #include <expfld.hxx>
+#include <fmtclds.hxx>
 
 #include <vcl/graph.hxx>
 class SvxBrushItem;
